--- a/dubbo-ext/pom.xml
+++ b/dubbo-ext/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <artifactId>dubbo-parent</artifactId>
         <groupId>com.alibaba</groupId>
-        <version>3.0.1-SNAPSHOT</version>
+        <version>3.1.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dubbo-ext</artifactId>
     <packaging>jar</packaging>
-    <version>3.0.1-SNAPSHOT</version>
+    <version>3.1.1</version>
     <name>dubbo extension</name>
 
     <dependencies>
