--- a/dubbo-remoting/pom.xml
+++ b/dubbo-remoting/pom.xml
@@ -18,7 +18,7 @@
 	<parent>
 		<groupId>com.alibaba</groupId>
 		<artifactId>dubbo-parent</artifactId>
-		<version>3.0.1-SNAPSHOT</version>
+		<version>3.1.1</version>
 	</parent>
 	<artifactId>dubbo-remoting</artifactId>
 	<packaging>pom</packaging>
