--- a/dubbo-rpc/dubbo-rpc-protobuf/pom.xml
+++ b/dubbo-rpc/dubbo-rpc-protobuf/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>dubbo-rpc</artifactId>
         <groupId>com.alibaba</groupId>
-        <version>3.0.1-SNAPSHOT</version>
+        <version>3.1.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
