--- a/dubbo/pom.xml
+++ b/dubbo/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>com.alibaba</groupId>
         <artifactId>dubbo-parent</artifactId>
-        <version>3.0.1-SNAPSHOT</version>
+        <version>3.1.1</version>
     </parent>
     <artifactId>dubbo</artifactId>
     <packaging>jar</packaging>
