--- a/pom.xml
+++ b/pom.xml
@@ -40,14 +40,27 @@
 	</organization> 
 	 	<!-- 依赖仓库 -->
 	<repositories>
-		<!--<repository>-->
-			<!--<id>dev-nexus</id>-->
-			<!--<url>http://ob.hemeicloud.com/nexus/content/groups/public</url>-->
-			<!--<snapshots>-->
-				<!--<enabled>true</enabled>  -->
-                <!--<updatePolicy>always</updatePolicy> -->
-			<!--</snapshots>-->
-		<!--</repository>-->
+		<repository>
+			<id>nexus</id>
+			<name>nexus</name>
+			<url>http://172.17.142.214:8081/nexus/content/groups/public/</url>
+		</repository>
+
+		<repository>
+			<id>nexus-snapshots</id>
+			<name>ph</name>
+			<url>http://172.17.142.214:8081/nexus/content/repositories/snapshots/</url>
+		</repository>
+
+		<repository>
+			<id>central</id>
+			<name>Central Repository</name>
+			<url>http://repo.maven.apache.org/maven2</url>
+			<layout>default</layout>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
 	</repositories>
 	<!-- 插件依赖仓库 -->
 	<pluginRepositories>
@@ -172,11 +185,12 @@
 		<java_target_version>1.6</java_target_version>
 		<file_encoding>UTF-8</file_encoding>
 
-		<maven_source_plugin_version>2.1.1</maven_source_plugin_version>
+		<maven_source_plugin_version>2.4</maven_source_plugin_version>
 		<maven_jar_plugin_version>2.3.2</maven_jar_plugin_version>
 		<maven_war_plugin_version>2.1.1</maven_war_plugin_version>
 		<maven_install_plugin_version>2.3.1</maven_install_plugin_version>
 		<maven_deploy_plugin_version>2.7</maven_deploy_plugin_version>
+		<maven_javadoc_plugin_version>2.10.2</maven_javadoc_plugin_version>
 
         <maven-surefire-plugin_version>2.17</maven-surefire-plugin_version>
 	</properties>
@@ -615,6 +629,17 @@
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>${maven_javadoc_plugin_version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-source-plugin</artifactId>
+					<version>${maven_source_plugin_version}</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>${maven_compiler_plugin_version}</version>
 					<configuration>
@@ -751,12 +776,12 @@
     	<repository>
             <id>nexus-releases</id>
             <name>Nexus Release Repository</name>
-            <url>http://123.57.65.95:8081/nexus/content/repositories/cfsd/</url>
+            <url>http://172.17.142.214:8081/nexus/content/repositories/releases/</url>
         </repository>
         <snapshotRepository>  
             <id>nexus-snapshots</id>
             <name>nexus snapshot repository</name>  
-            <url>http://123.57.65.95:8081/nexus/content/repositories/cfsd/</url>
+            <url>http://172.17.142.214:8081/nexus/content/repositories/snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
 </project>
